@@ -5,6 +5,7 @@ Pending changes in the mainline
 * Fix of DICOMDIR generation with DCMTK 3.6.1, support of encodings
 * New function in plugin SDK: "OrthancPluginSendMultipartItem2()"
 * Fix range search if the lower or upper limit is absent
+* Fix modality worklists lookups if tags with UN (unknown) VR are present
 
 
 Version 0.9.6 (2015/12/08)
